--- a/main.html
+++ b/main.html
@@ -43,13 +43,13 @@
 
       <!-- <p>Experience the taste of excellence</p> -->
       <nav class="navbar">
-        <a class="active" href="main.html">View Applications</a>
-        <a href="about.html">Current Workers</a>
+        <a class="active" href="applications.html">View Applications</a>
+        <a href="workers.html">Current Workers</a>
    
       </nav>
 
       <div class="signout_btn">50
-        <button class="btn"><a href="signin.html">Signout</a></button>
+        <button class="btn"><a href="login.html">Signout</a></button>
         <i class="fa-solid fa-bars" id="bar"></i>
       </div>
     </header>
