--- a/workers.html
+++ b/workers.html
@@ -58,7 +58,7 @@
 
         <hr>
         <div class="credit">
-          &copy; 2024 <span>Culnoary Harbor.</span> All rights reserved.
+          &copy; 2024 <span>Culinary Harbor.</span> All rights reserved.
         </div>
       </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
