--- a/waiapplications.html
+++ b/waiapplications.html
@@ -66,6 +66,9 @@
     <div class="button-row">
         <a href="waiapplications.html" class="apply3"><button>Waiter/Waitress Applications</button></a>
     </div>  
+    <div class="button-row">
+      <a href="SCapplications.html" class="apply3"><button>Sous Chef Applications</button></a>
+  </div>  
 
     
 
