--- a/index.html
+++ b/index.html
@@ -63,18 +63,6 @@
     </form>
   </div>
 
-  <script>
-    function login() {
-      var username = document.getElementById('username').value;
-      var password = document.getElementById('password').value;
-
-      if (username === 'CHadmin1289' && password === 'CHadminpass8912') {
-        alert('Login successful');
-        window.location.href = 'main.html'; // Redirect to main.html
-      } else {
-        alert('Invalid username or password');
-      }
-    }
-  </script>
+    <script src="main.js"></script>
 </body>
 </html>
